# embeden-wiegand-code---ahmad-left

./: README.md
wiegand-embedded-wifi/: CMakeLists.txt  MQTTCMD.txt  Makefile  Test.json  partitions.csv  sdkconfig  sdkconfig.old
wiegand-embedded-wifi/main/: CMakeLists.txt  HF_TCPsocket.c  HF_TCPsocket.h  HF_cmd_list.h  HF_gpio.c  HF_gpio.h  HF_httpserver.c  HF_httpserver.h  HF_mqtt.c  HF_mqtt.h  HF_nvs.c  HF_nvs.h  HF_reader.c  HF_reader.h  HF_sntp.c  HF_sntp.h  HF_storage.c  HF_storage.h  HF_wifi.c  HF_wifi.h  Kconfig.projbuild  component.mk  ds3231.c  ds3231.h  globleVariables.h  i2cdev.c  i2cdev.h  main.c  typeDefinitions.h
wiegand-embedded-wifi/main/wieganHost/: index.html
wiegand-embedded-wifi/spiffs/: sched_0  sched_1  sched_2
